<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Pelicann</string>
    <string name="facebook_application_id" translatable="false">159539307868031</string>
    <string name="twitter_consumer_key" translatable="false">AYlTVxRfSPi7tjlEH14aQOeAD</string>
    <string name="twitter_consumer_secret" translatable="false">p4QlSmmog6Vm4Kq7bnqBFVOXcysMfvcB1rPeJ41S4b2sONGY3Y</string>
    <string name="default_toolbar_title">@string/app_name</string>
    <string name="progress_dialog_loading">ロード中…</string>
    <string name="sign_in_default">サインイン</string>
    <string name="general_error">エラーが起こりました。</string>
    <string name="idp_name_google">Google</string>
    <string name="idp_name_facebook">Facebook</string>
    <string name="idp_name_twitter">Twitter</string>
    <string name="sign_in_with_google">Googleでサインイン</string>
    <string name="sign_in_with_facebook">Facebookでサインイン</string>
    <string name="sign_in_with_twitter">Twitterでサインイン</string>
    <string name="sign_in_with_email">メールでサインイン</string>
    <string name="next_default">次へ</string>
    <string name="email_hint">メールアドレス</string>
    <string name="password_hint">パスワード</string>
    <string name="required_field">You can\'t leave this empty.</string>
    <string name="invalid_email_address">メールアドレスが間違っています</string>
    <string name="missing_email_address">Enter your email address to continue</string>
    <string name="progress_dialog_checking_accounts">既存アカウントを確認中…</string>
    <string name="title_register_email">アカウント登録</string>
    <string name="name_hint">First &amp; last name</string>
    <string name="button_text_save">保存</string>
    <string name="progress_dialog_signing_up">アカウント登録中…</string>
    <plurals name="error_weak_password">
        <item quantity="one">パスワードをもっと強くしましょう. %1$d文字以上、文字と数字両方を使用してください</item>
        <item quantity="other">パスワードをもっと強くしましょう. %1$d文字以上、文字と数字両方を使用してください</item>
    </plurals>
    <string name="email_account_creation_error">アカウント登録に失敗しました</string>
    <string name="error_user_collision">そのメールアドレスのアカウントはすでに存在します</string>
    <string name="create_account_preamble">"By tapping SAVE you are indicating that you agree to the "</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="title_welcome_back_idp_prompt">@string/sign_in_default</string>
    <string name="title_welcome_back_password_prompt">@string/sign_in_default</string>
    <string name="welcome_back_idp_header">すでにアカウントが登録されています</string>
    <string name="welcome_back_email_header">ようこそ!</string>
    <string name="welcome_back_idp_prompt">
        <xliff:g example="jane.doe@example.com" id="email_addr">%1$s</xliff:g>は登録されています。
        <xliff:g example="Google" id="provider_name">%2$s</xliff:g>でサインインしてください。
    </string>
    <string name="welcome_back_password_prompt_body">
        <xliff:g example="jane.doe@example.com" id="email_addr">%1$s</xliff:g>は登録されています。
        そのアカウントのパスワードでサインインしてください。
    </string>
    <string name="progress_dialog_signing_in">サインイン中…</string>
    <string name="trouble_signing_in">サインインできませんか?</string>
    <string name="title_recover_password_activity">パスワードを復旧</string>
    <string name="title_confirm_recover_password">メールを確認してください</string>
    <string name="password_recovery_body">Get instructions sent to this email that explain how to
        reset your password.</string>
    <string name="button_text_send">送信</string>
    <string name="confirm_recovery_body">%1$sに送られた指示に従ってパスワードを復元してください。</string>
    <string name="progress_dialog_sending">送信中…</string>
    <string name="error_email_does_not_exist">アカウントのメールアドレスと一致しません</string>
    <string name="accessibility_logo">App logo</string>
    <string name="toolbar_search_title">検索</string>
    <string name="toolbar_description_title">説明</string>
    <string name="no_connection">ネットに接続してください</string>
    <string name="preferences_main_key">Main Preferences</string>
    <string name="preferences_category_questions_label">
        問題
    </string>
    <string name="preferences_category_questions_key">
        preferences:questions
    </string>
    <string name="preferences_questions_descriptionBeforeLessonWithExceptionRule_screen_key">
        preferenceScreen:description before exception question
    </string>
    <string name="preferences_questions_descriptionBeforeLessonWithExceptionRule_key">
        preferences:description before exception question
    </string>
    <string name="preferences_questions_descriptionBeforeLessonWithExceptionRule_label_short">
        例外的な文法の説明文
    </string>
    <string name="preferences_questions_descriptionBeforeLessonWithExceptionRule_show">表示する</string>
    <string name="preferences_questions_descriptionBeforeLessonWithExceptionRule_label_long">
        例外的な文法の説明文を表示する
    </string>
    <string name="preferences_questions_descriptionBeforeLessonWithExceptionRule_true">表示</string>
    <string name="preferences_questions_descriptionBeforeLessonWithExceptionRule_false">非表示</string>
    <string name="preferences_questions_descriptionBeforeLessonWithExceptionRule_description_functionality">
        例外的な文法が出題されるレッスンを学習するとき、レッスン選択画面の説明文にその文法の説明を載せるかどうか選択できます。非表示にした場合、問題を間違えた際に表示されるアドバイス画面と結果画面で文法を学べます（結果画面の説明文には例外的な文法の説明も表示されます）。
    </string>
    <string name="preferences_questions_descriptionBeforeLessonWithExceptionRule_description_reason">
        説明文を隠すので、Pelicannで勉強した事前知識のみで問題を解くことになります。そして当たり前のように例外的な文法に引っ掛かります。\n問題を間違えた後のアドバイスで例外的な文法の説明をします。「こうだったと思ったのに、実はこうだった」という発見ができると思います。事前に説明文を読むとこの発見はできません。\n\n
        なぜこの発見が重要なのか。自分の誤りと正しい文法を比べることにより、より効率的にその文法を覚えられます。これは Garden Path Technique (ガーデンパステクニック)といい、何人もの研究者が実証しています。良ければ調べてみてください。（似たような単語に「ガーデンパス現象」がありますが、これは全くの別物です）
    </string>
    <string name="preferences_questions_numberOfAttemptsPerQuestion_key">
        preferences:number of question attempts
    </string>
    <string name="preferences_questions_numberOfAttemptsPerQuestion_label">
        問題ごとの解答回数：%1$d
    </string>
    <string name="preferences_questions_numberOfAttemptsPerQuestion_dialog_label">
        新しい解答回数
    </string>
    <string name="preferences_questions_numberOfAttemptsPerQuestion_description">
        問題を何回間違っていいのか設定できます。\n間違えたらすぐに答えを確認せず、何が間違っているのかじっくり考えてください。
    </string>
    <string name="preferences_category_general_label">
        一般
    </string>
    <string name="preferences_category_general_key">
        preferences:general
    </string>
    <string name="preferences_general_lessons_per_day_key">
        preferences:lessons per day
    </string>
    <string name="preferences_general_lessons_per_day_label">
        1日の目標レッスン数：%1$d
    </string>
    <string name="preferences_general_lessons_per_day_label_empty">
        1日の目標レッスン数
    </string>
    <string name="preferences_general_lessons_per_day_dialog_label">
        新しい目標
    </string>
    <string name="preferences_general_lessons_per_day_description">
        目標を設定して、毎日コツコツ勉強しましょう。
    </string>
    <string name="preferences_general_themeColor_key">
        preferences:theme color
    </string>
    <string name="preferences_general_themeColor_blue">青</string>
    <string name="preferences_general_themeColor_green">緑</string>
    <string name="preferences_general_themeColor_red">赤</string>
    <string name="preferences_general_themeColor_yellow">黄色</string>
    <string name="preferences_general_themeColor_label">背景の色</string>
    <string name="preferences_general_themeColor_dialog_label">新しい色</string>
    <string name="preferences_first_time_key">preferences:first time</string>
    <string name="preferences_last_selected_lesson_level">preferences: last selected lesson level</string>
    <string name="preferences_report_card_last_selected_lesson_level">preferences: report card last selected lesson level</string>
    <string name="preferences_subscreen_functionality_title">機能</string>
    <string name="preferences_subscreen_reason_title">理由</string>
    <string name="tutorial_choose_person_title">突然ですが、彼氏（彼女）にしたい有名人の名前を教えてください</string>
    <string name="tutorial_choose_person_search_button">検索</string>
    <string name="tutorial_choose_person_not_found1">誤字がないか確認して、もう一度検索してみてください</string>
    <string name="tutorial_choose_person_not_found2">もう少し有名な人を検索してみてください</string>
    <string name="tutorial_confirm_person_title">%1$sですね！\nでは%2$sといっしょに最初のレッスンに進みましょう！</string>
    <string name="tutorial_confirm_person_gender_male">彼</string>
    <string name="tutorial_confirm_person_gender_female">彼女</string>
    <string name="tutorial_confirm_person_start">始める</string>
    <string name="tutorial_lesson_details_go_to_lesson_description">まずはレッスンの説明文を見て勉強しましょう ↑↑</string>
    <string name="tutorial_lesson_details_go_to_question">ではレッスンを始めましょう　↑↑</string>
    <string name="tutorial_final_explanation1_title">お疲れ様です！</string>
    <string name="tutorial_final_explanation2_title">お気に入り</string>
    <string name="tutorial_final_explanation3_title">なくてもいいです</string>
    <string name="tutorial_final_explanation1_description">このように、自分の好きな人や場所が例文に出てきます。\n興味がある内容で英語を楽しく学習しましょう！</string>
    <string name="tutorial_final_explanation2_description">例文に出てくる人や場所は「お気に入り」で管理できます。</string>
    <string name="tutorial_final_explanation3_description">お気に入りが少なかったり空っぽでも、問題なく学習できます。</string>
    <string name="onboarding_next">次へ</string>
    <string name="onboarding_skip">スキップ</string>
    <string name="onboarding_finish">始める</string>
    <string name="onboarding1_explanation">「お気に入り」に好きな人や場所を追加すると・・・</string>
    <string name="onboarding3v2_instructions">最初のレッスンに出てくる人と場所を追加しましょう。\n\n
    人を3人、国を2国、都市を２つ検索して、追加してください。</string>
    <string name="onboarding3v2_items_left"><b>人</b>：あと<b>%1$d</b>人\n<b>国</b>：あと<b>%2$d</b>国\n<b>都市</b>：あと<b>%3$d</b>つ</string>
    <string name="onboarding3v2_finished">お疲れ様です。\nこれでレッスンにあなたが追加した人と場所が登場します。\n「始める」で勉強画面に移りましょう。</string>
    <string name="fragment_user_interests_title">お気に入り</string>
    <string name="fragment_user_data_title">データ</string>
    <string name="fragment_settings_title">設定</string>
    <string name="fragment_lesson_list_title">勉強</string>
    <string name="fragment_vocabulary_list_title">単語帳</string>
    <string name="lessons_level1">レベル1</string>
    <string name="lessons_level2">レベル2</string>
    <string name="results_correct_ct_unit">点</string>
    <string name="results_first_clear">初クリア!</string>
    <string name="results_review">復習する</string>
    <string name="results_finish_no_review">終了する</string>
    <string name="results_daily_lesson_ct_title">今日のレッスン数</string>
    <string name="results_daily_lesson_ct_set">設定する</string>
    <string name="lesson_details_instance_details_title">詳細</string>
    <string name="lesson_details_instance_details_played_number">学習回数</string>
    <string name="lesson_details_instance_details_average_score">平均正解率</string>
    <string name="lesson_details_instance_details_last_played">最終学習日</string>
    <string name="lesson_details_instance_details_last_played_score">最終学習正解率</string>
    <string name="user_profile_report_card_average_score">平均正解率</string>
    <string name="user_profile_report_card_cleared">合格ライン以上</string>
    <string name="user_profile_report_card_not_clear">不合格</string>
    <string name="question_true_false_instructions">本当ですか？</string>
    <string name="question_true_false_true">本当</string>
    <string name="question_true_false_false">嘘</string>
    <string name="vocabulary_details_meaning">意味</string>
    <string name="vocabulary_details_example_sentence">例文</string>
    <string name="vocabulary_details_go_to_lesson">レッスンにいく</string>
    <string name="calendar_sunday">日</string>
    <string name="calendar_monday">月</string>
    <string name="calendar_tuesday">火</string>
    <string name="calendar_wednesday">水</string>
    <string name="calendar_thursday">木</string>
    <string name="calendar_friday">金</string>
    <string name="calendar_saturday">土</string>
    <string name="calendar_left">＜</string>
    <string name="calendar_right">＞</string>
</resources>