<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/main_navigation_drawer_interests"
        android:title="@string/fragment_user_interests_title"
        android:icon="@drawable/ic_favorite"/>
    <item android:id="@+id/main_navigation_drawer_data"
        android:title="@string/fragment_user_data_title"/>
    <item android:id="@+id/main_navigation_drawer_vocabulary"
          android:title="@string/fragment_vocabulary_list_title"
          android:icon="@drawable/ic_list"/>
    <item android:id="@+id/main_navigation_drawer_settings"
        android:title="@string/fragment_settings_title"
        android:icon="@drawable/ic_settings"/>

    <item android:title="@string/fragment_lesson_list_title">
        <menu>
            <item android:id="@+id/main_navigation_drawer_lesson_level1"
                android:title="@string/lessons_level1"
                />
            <item android:id="@+id/main_navigation_drawer_lesson_level2"
                  android:title="@string/lessons_level2"
                />
        </menu>
    </item>
</menu>