<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <!-- date toolbar -->
    <RelativeLayout
        android:id="@+id/calendar_month_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:animateLayoutChanges="true"
        >

        <!-- prev button -->
        <Button
            android:id="@+id/calendar_prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:textSize="21sp"
            android:text="@string/calendar_left"
            android:visibility="invisible"/>

        <!-- date title -->
        <TextView
            android:id="@+id/calendar_date_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/calendar_prev_button"
            android:layout_toLeftOf="@+id/calendar_next_button"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#222222"/>

        <!-- next button -->
        <Button
            android:id="@+id/calendar_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:textSize="21sp"
            android:text="@string/calendar_right"
            android:visibility="invisible"/>
    </RelativeLayout>

    <!-- days header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@color/red500"
            android:text="@string/calendar_sunday"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/calendar_monday"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/calendar_tuesday"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/calendar_wednesday"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/calendar_thursday"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/calendar_friday"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@color/blue500"
            android:text="@string/calendar_saturday"/>
    </LinearLayout>

    <!-- days view -->
    <com.linnca.pelicann.userprofile.ExpandedGridView
        android:id="@+id/calendar_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="7"/>
</LinearLayout>