<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="24dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/lblue500"
        android:textSize="19sp"
        android:text="@string/lesson_details_instance_details_title"/>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow android:padding="12dp">
            <TextView
                android:textSize="15sp"
                android:text="@string/lesson_details_instance_details_played_number"
                android:layout_marginEnd="12dp"/>
            <TextView
                android:id="@+id/lesson_details_instance_details_played_number"
                android:textSize="15sp"
                />
        </TableRow>
        <TableRow android:padding="12dp">
            <TextView
                android:textSize="15sp"
                android:text="@string/lesson_details_instance_details_average_score"
                android:layout_marginEnd="12dp"/>
            <TextView
                android:id="@+id/lesson_details_instance_details_average_score"
                android:textSize="15sp"
                />
        </TableRow>
        <TableRow android:padding="12dp">
            <TextView
                android:textSize="15sp"
                android:text="@string/lesson_details_instance_details_last_played"
                android:layout_marginEnd="12dp"/>
            <TextView
                android:id="@+id/lesson_details_instance_details_last_played"
                android:textSize="15sp"
                />
        </TableRow>
        <TableRow android:padding="12dp">
            <TextView
                android:textSize="15sp"
                android:text="@string/lesson_details_instance_details_last_played_score"
                android:layout_marginEnd="12dp"/>
            <TextView
                android:id="@+id/lesson_details_instance_details_last_played_score"
                android:textSize="15sp"
                />
        </TableRow>
    </TableLayout>
</LinearLayout>