<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="?attr/actionBarSize"
    >
    <TextView
        android:id="@+id/onboarding3v2_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        android:text="@string/onboarding3v2_instructions"/>
    <TextView
        android:id="@+id/onboarding3v2_items_left_textview"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:text="@string/onboarding3v2_items_left"/>
    <TextView
        android:id="@+id/onboarding3v2_items_to_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="15sp"
        android:textColor="?attr/colorAccent500"/>
    <TextView
        android:id="@+id/onboarding3v2_finished"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textSize="21sp"
        android:text="@string/onboarding3v2_finished"/>
    <SearchView
        android:id="@+id/onboarding3v2_searchview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/onboarding3v2_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>