<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="48dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:textSize="16sp"
        android:textColor="?attr/colorAccent500"
        android:text="@string/vocabulary_details_meaning"
        />
    <TextView
        android:id="@+id/vocabulary_details_item_meaning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:textSize="16sp"
        android:textColor="?attr/colorAccent500"
        android:text="@string/vocabulary_details_example_sentence"/>
    <TextView
        android:id="@+id/vocabulary_details_item_example_sentence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/vocabulary_details_item_example_sentence_translation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:textSize="16sp"
        />
    <Button
        android:id="@+id/vocabulary_details_item_go_to_lesson_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textColor="?attr/color500"
        android:background="@drawable/transparent_button"
        android:text="@string/vocabulary_details_go_to_lesson"
        />

</LinearLayout>