<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="48dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:baselineAligned="false"
            android:layout_marginBottom="24dp">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/results_questions_correct_accuracy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="42sp"/>
                <TextView
                    android:id="@+id/results_questions_correct_accuracy_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/results_questions_correct_accuracy"
                    android:layout_alignBottom="@id/results_questions_correct_accuracy"
                    android:layout_marginStart="8dp"
                    android:textSize="15sp"
                    android:text="@string/results_correct_ct_unit"/>

            </RelativeLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.6"
                android:gravity="center">

                <TextView
                    android:id="@+id/results_daily_lesson_ct_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:text="@string/results_daily_lesson_ct_title"
                    android:textSize="21sp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:gravity="center">
                    <ProgressBar
                        android:id="@+id/results_daily_lesson_ct_progress_bar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerInParent="true"
                        android:indeterminate="false"
                        android:progressDrawable="@drawable/progress_bar_circle"
                        />
                    <ImageView
                        android:id="@+id/results_daily_lesson_ct_completed"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerInParent="true"
                        android:visibility="gone"
                        android:alpha="0"
                        android:tint="?attr/colorAccent300"
                        android:scaleType="fitXY"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_check_circle"/>
                    <Button
                        android:id="@+id/results_daily_lesson_ct_set"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:visibility="gone"
                        android:text="@string/results_daily_lesson_ct_set"
                        android:background="@drawable/transparent_button"
                        android:textColor="?attr/colorAccent500"/>
                </RelativeLayout>

                <TextView
                    android:id="@+id/results_daily_lesson_ct_progress_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="?attr/colorAccent"/>
            </LinearLayout>

        </LinearLayout>
        <!--only show if the user needs to review-->
        <Button
            android:id="@+id/results_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:visibility="gone"
            android:background="@drawable/colored_button"
            android:textColor="@color/white"
            android:text="@string/results_review"
            />
        <!--change text and layout depending on whether the user needs to review-->
        <Button
            android:id="@+id/results_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/colored_button"
            android:textColor="@color/white"
            android:text="@string/results_finish_no_review"/>

        <TextView
            android:id="@+id/results_first_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:visibility="gone"
            android:textSize="21sp"
            android:textStyle="bold"
            android:text="@string/results_first_clear"/>
        <TextView
            android:id="@+id/results_unlocked_lesson_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="17sp"/>
        <LinearLayout
            android:id="@+id/results_unlocked_lesson_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="32dp"/>
    </LinearLayout>
</ScrollView>
